--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,45 @@
-version: "2"
-
+---
+version: '2'
 services:
   zookeeper:
-    image: docker.io/bitnami/zookeeper:3.8
+    image: confluentinc/cp-zookeeper:latest
+    hostname: zookeeper
     ports:
-      - "2181"
+      - 2181:2181
     environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-    volumes:
-      - zookeeper_data:/bitnami/zookeeper
+      ZOOKEEPER_CLIENT_PORT: '2181'
+      ZOOKEEPER_TICK_TIME: '2000'
 
-  kafka-0:
-    image: docker.io/bitnami/kafka:3.2
-    ports:
-      - "9092"
-    environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_BROKER_ID=0
-      - ALLOW_PLAINTEXT_LISTENER=yes
-    volumes:
-      - kafka_0_data:/bitnami/kafka
+  broker:
+    image: confluentinc/cp-kafka:5.4.2
+    hostname: broker
     depends_on:
       - zookeeper
-
-  kafka-1:
-    image: docker.io/bitnami/kafka:3.2
     ports:
-      - "9092"
+      - 29092:29092
+      - 9092:9092
+      - 9101:9101
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_BROKER_ID=1
-      - ALLOW_PLAINTEXT_LISTENER=yes
-    volumes:
-      - kafka_1_data:/bitnami/kafka
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      # KAFKA_ADVERTISED_HOST_NAME: 'broker'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENERS: 'PLAINTEXT://:29092,PLAINTEXT_HOST://:9092'
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_DELETE_TOPIC_ENABLE: 'true'
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+
+  schema-registry:
+    image: confluentinc/cp-schema-registry:5.5.1
     depends_on:
       - zookeeper
-
-  kafka-2:
-    image: docker.io/bitnami/kafka:3.2
+      - broker
     ports:
-      - "9092"
+      - '8081:8081'
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_BROKER_ID=2
-      - ALLOW_PLAINTEXT_LISTENER=yes
-    volumes:
-      - kafka_2_data:/bitnami/kafka
-    depends_on:
-      - zookeeper
-
-volumes:
-  zookeeper_data:
-    driver: local
-  kafka_0_data:
-    driver: local
-  kafka_1_data:
-    driver: local
-  kafka_2_data:
-    driver: local
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
