--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^9.0.8",
     "@nestjs/platform-express": "^8.0.0",
     "kafkajs": "^2.1.0",
     "reflect-metadata": "^0.1.13",
