--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^9.0.8",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^2.1.0",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
     "kafkajs": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -34,6 +37,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
